--- a/style.css
+++ b/style.css
@@ -154,11 +154,11 @@ nav .follow-btn{
 .funny-videos-container{
     display: flex;
     justify-content: center;
-    gap: 10px;
+    gap: 17px;
     margin-top: 40px;
 }
 .funny-videos-container .card img, .card{
-    width: 20vw;
+    width: 17vw;
 }
 
 .play-instantly{
@@ -180,13 +180,78 @@ nav .follow-btn{
 .play-instantly-image .big-image{
     width: 30vw;
 }
-.small-image{
-    width: 200px;
+.play-instantly .small-image{
+    width: 13vw;
     z-index: 1;
     position: absolute;
     top: 60%;
     left: -8%;
 }
+
+.game-types{
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+    flex-wrap: wrap;
+    margin: 100px 8%;
+}
+.game-types .game-item p{
+    font-size: 1.25rem;
+    color: #0B0223;
+    font-weight: 600;
+}
+.game-item{
+    border: none;
+    border-radius: 50px;
+    display: flex;
+    gap: 20px;
+    margin: 20px;
+    padding: 7px;
+    transition: 0.2s;
+    word-wrap: none;
+}
+.game-item:hover{
+    border: 2px solid #F948B2;
+}
+.game-item:hover p{
+    color: #F948B2;
+}
+
+/* footer section */
+.footer{
+    background: #0B0223;
+    width: 100%;
+}
+.footer-container{
+    width: 70vw;
+    margin: auto;
+    padding: 7%;
+    text-align: center;
+}
+.footer-container .logo h3{
+    color: white;
+    font-size: 2rem;
+}
+.footer-options{
+    display: flex;
+    justify-content: center;
+    gap: 4%;
+}
+.footer-options p{
+    color: white;
+    font-weight: 600;
+    margin-bottom: 40px;
+}
+.social-icons img{
+    margin-left: 3%;
+}
+.lower-text{
+    display: flex;
+    justify-content: center;
+    gap: 2%;
+}
+
+
 
 
 
@@ -231,7 +296,7 @@ nav .follow-btn{
         flex-direction: column-reverse;
     }
     .we-are-gamers-text{
-        width: 100vw;
+        width: 85vw;
         text-align: center;
     }
     .we-are-gamers-image img{
@@ -264,5 +329,32 @@ nav .follow-btn{
     .play-instantly-image .small-image{
         width: 150px;
         top: 50%;
+    }
+
+    .game-types{
+        gap: 10px;
+        margin: 100px 0px;
+    }
+    .game-item{
+        margin: 0px;
+        gap: 7px;
+        
+    }
+    .game-types .game-item p{
+        font-size: 0.8rem;
+        
+    }
+    .game-item img{
+        width: 40px;
+        height: 40px;
+    }
+
+    .footer-options{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1%;
+    }
+    .footer-options p{
+        font-size: 0.8rem;
     }
 }
