--- a/style.css
+++ b/style.css
@@ -157,6 +157,41 @@ nav .follow-btn{
     gap: 17px;
     margin-top: 40px;
 }
+
+.funny-videos-container .card .play-button img {
+    width: 50px;
+    height: auto;
+}
+.funny-videos-container .card .play-button p{
+    color: #FF42A5;
+}
+.card{
+    position: relative;
+    transition: 0.3s; 
+}
+
+.card .play-button{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    display: none;
+    transition: 0.3s;
+}
+.card:hover .play-button{
+    display: block;
+    cursor: pointer;
+}
+.card img{
+    transition: 0.2s;
+}
+.card:hover > img{
+    filter: brightness(20%);
+    border: 3px solid #F948B2;
+    border-radius: 16px;
+    cursor: pointer;
+}
+
 .funny-videos-container .card img, .card{
     width: 17vw;
 }
