--- a/style.css
+++ b/style.css
@@ -133,7 +133,9 @@ nav .follow-btn{
     justify-content: center;
     gap: 30px;
     align-items: center;
-    margin: 80px auto;
+    padding-top: 70px;
+    padding-bottom: 30px;
+    margin-bottom: 100px;
 }
 .we-are-gamers-text{
     text-align: right;
@@ -152,9 +154,11 @@ nav .follow-btn{
     -webkit-text-fill-color: #0B0223;
 }
 .funny-videos-container{
-    display: flex;
-    justify-content: center;
-    gap: 17px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    place-items: center;
+    margin: auto 10%;
+    grid-gap: 2px;
     margin-top: 40px;
 }
 
@@ -167,7 +171,6 @@ nav .follow-btn{
 }
 .card{
     position: relative;
-    transition: 0.3s; 
 }
 
 .card .play-button{
@@ -178,17 +181,18 @@ nav .follow-btn{
     display: none;
     transition: 0.3s;
 }
+.card > img{
+    border:4px solid transparent;
+    border-radius: 16px;
+    transition: 0.2s;
+}
 .card:hover .play-button{
     display: block;
     cursor: pointer;
 }
-.card img{
-    transition: 0.2s;
-}
 .card:hover > img{
     filter: brightness(20%);
-    border: 3px solid #F948B2;
-    border-radius: 16px;
+    border: 4px solid #FF42A5;
     cursor: pointer;
 }
 
@@ -197,13 +201,16 @@ nav .follow-btn{
 }
 
 .play-instantly{
-    margin-top: 100px;
+    margin-top: 50px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
 .play-instantly-conatiner{
     display: flex;
     justify-content: center;
     gap: 10vw;
     align-items: center;
+    padding-top: 70px;
+    padding-bottom: 30px;
 }
 .play-instantly-text{
     text-align: right;
@@ -226,27 +233,28 @@ nav .follow-btn{
 .game-types{
     display: flex;
     justify-content: center;
-    gap: 10%;
+    gap: 8px;
     flex-wrap: wrap;
-    margin: 100px 8%;
+    margin: 100px 6%;
 }
 .game-types .game-item p{
-    font-size: 1.25rem;
+    font-size: 1rem;
     color: #0B0223;
     font-weight: 600;
 }
 .game-item{
-    border: none;
+    border: 3px solid transparent;
     border-radius: 50px;
     display: flex;
-    gap: 20px;
-    margin: 20px;
+    gap: 10px;
+    margin: 15px;
     padding: 7px;
     transition: 0.2s;
-    word-wrap: none;
+    word-wrap: break-word;
 }
 .game-item:hover{
-    border: 2px solid #F948B2;
+    border: 3px solid #F948B2;
+    cursor: pointer;
 }
 .game-item:hover p{
     color: #F948B2;
@@ -260,7 +268,7 @@ nav .follow-btn{
 .footer-container{
     width: 70vw;
     margin: auto;
-    padding: 7%;
+    padding: 3%;
     text-align: center;
 }
 .footer-container .logo h3{
@@ -339,7 +347,7 @@ nav .follow-btn{
     }
 
     .funny-videos-container{
-        flex-direction: column;
+        grid-template-columns: 1fr;
         align-items: center;
     }
     .funny-videos-container .card img, .card{
@@ -368,15 +376,16 @@ nav .follow-btn{
 
     .game-types{
         gap: 10px;
-        margin: 100px 0px;
+        margin: 100px auto;
     }
     .game-item{
         margin: 0px;
-        gap: 7px;
+        gap: 5px;
         
     }
     .game-types .game-item p{
         font-size: 0.8rem;
+        word-wrap: break-word;
         
     }
     .game-item img{
@@ -422,10 +431,19 @@ nav .follow-btn{
     }
 
     .we-are-gamers-text{
-        width: 50vw;
+        width: 45vw;
     }
     .we-are-gamers-image img{
-        width: 40vw;
+        width: 45vw;
+    }
+
+    .funny-videos-container{
+        grid-template-columns: repeat(2, 1fr);
+        margin: auto 12%;
+        grid-gap: 20px;
+    }
+    .funny-videos-container .card img, .card{
+        width: 32vw;
     }
     .play-instantly-image img{
         width: 40vw;
@@ -433,7 +451,9 @@ nav .follow-btn{
     .play-instantly-text{
         width: 50vw;
     }
-
+    .game-types{
+        margin: 100px auto;
+    }
     .game-item{
         gap: 5px;
     }
